# cnidoom

./: .gitignore  .gitmodules  CLAUDE.md  README.md  doom-agent-project.md  pyproject.toml
.githooks/: commit-msg  pre-commit
cmake/: riscv32-elf-clang.cmake
inference/: CMakeLists.txt  cnidoom.c  cnidoom.h  cnidoom_platform_default.c  cnidoom_syscalls.c  doom_agent.c  doom_agent.h  doom_agent_host.cc  doom_agent_preprocess.c  doom_agent_static.c  doom_agent_static_host.c  doom_agent_tflm.cc  doomgeneric_agent.c  doomgeneric_agent_rv32.c  doomgeneric_agent_sdl.c  golden_log.c  golden_log.h  test_preprocess.c  test_quantize.c  test_rvv_bitexact.c  test_rvv_generic_kernels.c  test_static_vs_tflm.cc  test_x86_bitexact.c  test_x86_generic_kernels.c  w_file_cnidoom.c  w_file_embedded.c
inference/kernels/: kernel_fixedpoint.h  kernel_ops.h
inference/kernels/generic/: concatenation.c  conv2d.c  depthwise_conv2d.c  fully_connected.c  logistic_lut.c  mean.c  tanh_lut.c
inference/kernels/riscv/: conv2d.c  depthwise_conv2d.c  fully_connected.c  logistic_lut.c  mean.c  tanh_lut.c
inference/kernels/x86/: conv2d.c  depthwise_conv2d.c  fully_connected.c  mean.c
inference/platform/rv32/: linker.ld  qemu_main.c  qemu_platform.c  ramfb.c  ramfb.h  startup.S  syscalls.c  uart.c
scripts/: build_static.sh  compare_models.sh  download_wad.sh  export.sh  run_rv32_qemu.sh  run_rv32_test.sh  train_curriculum.sh
tests/: test_env.py  test_export.py  test_model.py  test_train.py
tools/: codegen_graph.py  frame_viewer.c
training/: calibrate.py  env.py  export.py  model.py  train.py
training/scenarios/: basic.cfg  deadly_corridor.cfg  defend_the_center.cfg  defend_the_line.cfg  e1m1_agent.cfg  e1m1_short.cfg  e1m1_skill1.cfg  e1m1_skill5.cfg  e1m2_agent.cfg  e1m3_agent.cfg  e1m4_agent.cfg  health_gathering_supreme.cfg  my_way_home.cfg
